css/inputSelectCustom.css
.select-container {
  position: relative;
  width: 180px;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
}

.select-container .select {
  position: relative;
  background: #911C1C;
  border-radius: 5px;
  height: 60px;
}

.select-container {
  border-radius: 5px;
  cursor: pointer;
}

.select-container.active .select{
  border-radius: 5px 5px 0px 0px;
}

.select-container .select::after {
  position: absolute;
  content: "";
  width: 15px;
  height: 15px;
  top: 50%;
  right: 15px;
  transform: translateY(-55%) rotate(45deg);
  border-bottom: 2px solid white;
  border-right: 2px solid white;
}

.select-container.active .select::after {
  border: none;
  border-left: 2px solid white;
  border-top: 2px solid white;
}
.select-container .select input {
  position: relative;
  width: 100%;
  height: 100%;
  padding: 0 15px;
  background: none;
  outline: none;
  border: none;
  color: white;
  pointer-events: none;
}
.select-container .select input::placeholder {
  height: 100%;
  color: white;
}
.select-container .option-container {
  position: absolute;
  background: #911C1C;
  border-radius: 0px 0px 5px 5px;
  height: 0;
  overflow-y: hidden;
  transition: 0.4s;
  width: 180px;
}

.select-container.active .option-container {
  height: auto;
}

.select-container .option-container .option {
  position: relative;
  margin-left: 15px;
  margin-right: 15px;
  height: 60px;
  border-top: 1px solid white;
  cursor: pointer;
  display: flex;
  align-items: center;
  transition: 0.2s;
}

.select-container .option-container .option.selected {
  display: none;
}

.select-container .option-container .option:hover {
  padding-left: 10px;
  font-weight: bolder;
}

.select-container .option-container .option label {
  font-size: 1.1rem;
  color: white;
  cursor: pointer;
}

.filter_section div:first-child{
  display: flex;
  align-items: center;
}

.filter_section #label-select {
  font-weight: 700;
  font-size: 18px;
  line-height: 23px;
  margin-right: 30px;
}

.d-none {
  display: none;
}

